fix alignment

--- a/src/App.css
+++ b/src/App.css
@@ -8,4 +8,18 @@
     border-radius: 5px;
     font-weight: bold;
   }
+
+.App {
+  display: flex;
+  flex-direction: column;
+  background-color: #9ba9b9; 
+  align-items: center; /* Centers children horizontally in the flex container */
+  justify-content: center; /* Centers children vertically in the flex container */
+  color: #333; 
+  width: 100%;
+}
+
+.title {
+  text-align: center; 
+}
   
