--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,18 +1,19 @@
 
 .card {
-    width: 300px; /* Adjust width as needed */
+    width: 90%; 
+    max-width: 400px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     margin: 20px;
     border-radius: 10px;
     overflow: hidden;
-    background-color: white; /* Assuming a white background */
-    display: inline-block; /* For side-by-side card layout */
+    background-color: white;
+    display: inline-block; 
   }
   
   .card-image {
     width: 100%;
-    height: 200px; /* Adjust height to show the full image */
-    object-fit: cover; /* Cover will ensure the image covers the area, consider 'contain' for no cropping */
+    height: 200px; 
+    object-fit: cover; 
   }
   
   .card-content {
@@ -30,41 +31,10 @@
     color: #333; /* Darker text color for better contrast */
   }
   
-  .card-cuisine {
-    font-size: 1rem;
-    color: #666;
-    margin-bottom: 16px; /* Add space above the button */
-  }
-  
-  .btn-view-menu {
-    background-color: #007bff;
-    color: white;
-    border: none;
-    padding: 12px 24px;
-    text-align: center;
-    text-decoration: none;
-    display: block; /* Make the button a block to fill the width */
-    font-size: 1rem;
-    margin-top: auto; /* Push the button to the bottom */
-    cursor: pointer;
-    border-radius: 6px;
-    transition: background-color 0.3s ease; /* Smooth transition for hover effect */
-  }
-  
-  .btn-view-menu:hover {
-    background-color: #0056b3; /* Darker blue on hover for a nice interactive effect */
-  }
-  
-  /* Add responsive behavior */
-  @media (max-width: 768px) {
-    .card {
-      width: 90%; /* Full width on smaller screens */
-      margin: 20px auto; /* Centering cards */
-    }
-  }
+
   .btn-read-more {
     display: inline-block;
-    background-color: #007bff;
+    background-color: #da4747;
     color: white;
     text-align: center;
     padding: 10px 20px;
